# Library-management-system

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/include/: CMakeLists.txt  LibraryAPI.cpp  LibraryAPI.h
Application/src/: Admin.cpp  Admin.h  Book.cpp  Book.h  CMakeLists.txt  Customer.cpp  Customer.h  Library.cpp  Library.h  User.cpp  User.h  main.cpp
Console_Presentation/: main.cpp
Infrastructure/src/: Admin_infrastructure.cpp  Admin_infrastructure.h  adminsData.csv  book_infrastructure.cpp  book_infrastructure.h  booksData.csv  customer_infrastructure.cpp  customer_infrastructure.h  customersData.csv
Utility/: DynamicArray.h  Search.cpp
